[project]
name = "dagster-celery-k8s-oci"
version = "1.11.8"
description = "dagster-celery-k8s OCI image for Dagster deployments"
readme = "README.md"
requires-python = "~=3.13"
dependencies = [
    "dagster==1.11.8",
    "dagster-aws==0.27.8",
    "dagster-celery==0.27.8",
    "dagster-celery-k8s==0.27.8",
    "dagster-dbt==0.27.8",
    "dagster-embedded-elt==0.27.8",
    "dagster-graphql==1.11.8",
    "dagster-k8s==0.27.8",
    "dagster-postgres==0.27.8",
    "dagster-pyspark==0.27.8",
    "dagster-spark==0.27.8",
    "dagster-ssh==0.27.8",
    "dagster-webserver==1.11.8",
    "redis==6.4.0",
]
