[project]
name = "dagster-celery-k8s-oci"
version = "1.11.9"
description = "dagster-celery-k8s OCI image for Dagster deployments"
readme = "README.md"
requires-python = "~=3.13"
dependencies = [
    "dagster==1.11.9",
    "dagster-aws==0.27.9",
    "dagster-celery==0.27.9",
    "dagster-celery-k8s==0.27.9",
    "dagster-dbt==0.27.9",
    "dagster-embedded-elt==0.27.9",
    "dagster-graphql==1.11.9",
    "dagster-k8s==0.27.9",
    "dagster-postgres==0.27.9",
    "dagster-pyspark==0.27.9",
    "dagster-spark==0.27.9",
    "dagster-ssh==0.27.9",
    "dagster-webserver==1.11.9",
    "redis==6.4.0",
]
